RESOLVED FIXED145290
CPS rethreading should really get rid of GetLocals
https://bugs.webkit.org/show_bug.cgi?id=145290
Summary CPS rethreading should really get rid of GetLocals
Filip Pizlo
Reported 2015-05-21 18:45:23 PDT
This is benign right now because CSE gets rid of redundant GetLocals already. But, the idea is that CSE should not be mandatory. CPS rethreading should do it right.
Attachments
the patch (4.77 KB, patch)
2015-05-21 18:49 PDT, Filip Pizlo
benjamin: review+
Filip Pizlo
Comment 1 2015-05-21 18:49:38 PDT
Created attachment 253572 [details] the patch
WebKit Commit Bot
Comment 2 2015-05-21 18:52:09 PDT
Attachment 253572 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:1055: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2015-05-21 23:33:03 PDT
Note You need to log in before you can comment on or make changes to this bug.